--- a/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
@@ -19,11 +19,10 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <span class="govuk-caption-l">Add businesses and their roles in the supply chain</span>
-        <h1 class="govuk-heading-l govuk-!-margin-bottom-2">Cunningham Products Ltd</h1>
-        <strong class="govuk-tag govuk-tag--green govuk-!-margin-bottom-8">Active</strong>
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Cunningham Products Ltd</h1>
 
       
-                <h2 class="govuk-heading-m">Company identification</h2>
+                <h2 class="govuk-heading-m">Business details</h2>
 
                 <dl class="govuk-summary-list">
                     <div class="govuk-summary-list__row">
@@ -34,7 +33,7 @@
                         Cunningham Products Ltd
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> name</span></a>
+                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
                       </dd>
                     </div>
 
@@ -46,7 +45,7 @@
                         Cunningham Products Ltd
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a>
                       </dd>
                     </div>
                     <div class="govuk-summary-list__row">
@@ -54,10 +53,10 @@
                         Companies House number
                       </dt>
                       <dd class="govuk-summary-list__value">
-                        02076315    <a href="#">(View Companies House record)</a>
+                        02076315    <a href="#">(View on Companies House)</a>
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> address</span></a>
+                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> address</span></a>
                       </dd>
                     </div>
                   </dl>
@@ -70,32 +69,27 @@
 
                         </dt>
                         <dd class="govuk-summary-list__actions">
-                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details-cunningham">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
-                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
                         </dd>
                       </div>
+                      <p class="govuk-body govuk-!-margin-top-4">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">Add another address</a>
+                      </p>
                     </dl>
 
 
          
-        <h2 class="govuk-heading-m govuk-!-margin-top-8">Contact details</h2>
+        <h2 class="govuk-heading-m govuk-!-margin-top-8 govuk-!-margin-bottom-3">Contact details</h2>
 
         <dl class="govuk-summary-list ">
           <div class="govuk-summary-list__row ">
-            <p class="govuk-body ">None available</p>
 
             <dd class="govuk-summary-list__value">
-              <p class="govuk-body"></p>
-              <p class="govuk-body"></p>
-              <p class="govuk-body"></p>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <ul class="govuk-summary-list__actions-list">
-                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details-cunningham">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
-                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details-cunningham">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
-    </ul>
             </dd>
           </div>
+          <p class="govuk-body govuk-!-margin-top-4">
+            <a href="#" class="govuk-link govuk-link--no-visited-state">Add a contact</a>
+          </p>
         </dl>
 
 
@@ -103,7 +97,7 @@
       <form class="form govuk-!-margin-top-4" action="business-cunningham" method="post">
 
         <button type="submit" class="govuk-button" data-module="govuk-button">
-            Save and continue
+          Use business
           </button>
           
 
