--- a/app/views/psd-revised-flow/add-business-to-notification/old/edit-business-details.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/old/edit-business-details.html
@@ -414,6 +414,9 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
         </select>
   </div>
 
+  <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+    Add another contact
+  </button>
 
 </fieldset>
 </div>
