--- a/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
@@ -19,12 +19,12 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
       <span class="govuk-caption-l">Add businesses and their roles in the supply chain</span>
-      <h1 class="govuk-heading-l  govuk-!-margin-bottom-8">{{ data['trading_name'] }}</h1>
+      <h1 class="govuk-heading-l  govuk-!-margin-bottom-8">{{ data['business-details-trading_name'] }}</h1>
   </div>
 </div>
 
 
-                <h2 class="govuk-heading-m">Company identification</h2>
+                <h2 class="govuk-heading-m">Business details</h2>
 
                 <dl class="govuk-summary-list">
                     <div class="govuk-summary-list__row">
@@ -51,15 +51,30 @@
                     </div>
                   </dl>
 
+
+                    {% if 'business-details-name' in data and (data['business-details-name'] == '' or data['business-details-name'] is none) %}
+                    <h2 class="govuk-heading-m govuk-!-margin-top-8 govuk-!-margin-bottom-0">Addresses</h2>
+
+                    <dl class="govuk-summary-list govuk-!-margin-top-0">
+                        <div class="govuk-summary-list__row">
+  
+                                <dd class="govuk-summary-list__actions">
+                    <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span class="govuk-visually-hidden"> contact details</span></a></li>                </ul>
+                          </dd>
+                </div>
+                <p class="govuk-body govuk-!-margin-top-4">
+                  <a href="#" class="govuk-link govuk-link--no-visited-state">Add an address</a>
+                </p>
+              </dl>
+                  {% endif %}
+
+                  
+    
+                  {% if 'business-details-name' in data and data['business-details-name'] %}
                   <h2 class="govuk-heading-m govuk-!-margin-top-8">Addresses</h2>
 
                   <dl class="govuk-summary-list">
                       <div class="govuk-summary-list__row">
-
-
-                        {% if 'business-details-country' in data and (data['business-details-country'] == '' or data['business-details-country'] is none) %}
-                        <p class="govuk-body ">None available</p>
-                      {% endif %}
 
                         
                         {% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
@@ -81,71 +96,112 @@
         {% if data['business-details-registered'] %}
 <dd class="small-tag ">Registered address</dd>
 {% endif %}  
-        
-                        </dt>
-                        <dd class="govuk-summary-list__actions">
-                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
-                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></li>                </ul>
-                                </dd>
-                      </div>
-                    </dl>
+  </dt>
+                <dd class="govuk-summary-list__actions">
+                  <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></li>                </ul>
+                        </dd>
+              </div>
+              <p class="govuk-body govuk-!-margin-top-4">
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Add another address</a>
+              </p>
+            </dl>
+                {% endif %}
+    
 
 
          
-        <h2 class="govuk-heading-m govuk-!-margin-top-8">Contact details</h2>
 
-        <dl class="govuk-summary-list">
-          <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                {{ data['business-details-name'] }}
 
                 {% if 'business-details-name' in data and (data['business-details-name'] == '' or data['business-details-name'] is none) %}
-                <p class="govuk-body ">None available</p>
-              {% endif %}
-              
-                <p class="govuk-body govuk-!-margin-top-2">{{ data['business-details-job_title'] }}</p>
-              </dt>
+                <h2 class="govuk-heading-m govuk-!-margin-top-8 govuk-!-margin-bottom-0">Contact details</h2>
 
-            <dd class="govuk-summary-list__value">
-              <p class="govuk-body">{{ data['business-details-email'] }}</p>
-              <p class="govuk-body">{{ data['business-details-phone'] }}</p>
-              {% if data['business-details-name'] %}
-              <p class="govuk-body">
-                {% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
-                data['business-details-postcode'], data['business-details-country']] %}
+                <dl class="govuk-summary-list ">
+                  <div class="govuk-summary-list__row ">
+                      <dt class="govuk-summary-list__key ">
+                        {{ data['business-details-name'] }}
+        
 
-{% set rolesString = "" %}
-{% for role in roles %}
-  {% if role %}
-    {% if rolesString.length > 0 %}
-      {% set rolesString = rolesString + ', ' + role %}
-    {% else %}
-      {% set rolesString = role %}
-    {% endif %}
-  {% endif %}
-{% endfor %}
+                  </dd>
+                    <dd class="govuk-summary-list__actions ">
+                      <ul class="govuk-summary-list__actions-list ">
 
-{{ rolesString }} 
-              </p>
-              {% endif %}
-
- 
-          </dd>
-            <dd class="govuk-summary-list__actions">
-              <ul class="govuk-summary-list__actions-list">
-                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
-                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></li>                </ul>
+                        <li class="govuk-summary-list__actions-list-item ">
+                  <a class="govuk-link" href="#"><span class="govuk-visually-hidden"> contact details</span></a>
+                </li>                
+              </ul>
             </ul>
-            </dd>
-          </div>
+          </dd>
+        </div>
+          <p class="govuk-body govuk-!-margin-top-4">
+            <a href="#" class="govuk-link govuk-link--no-visited-state">Add a contact</a>
+          </p>
         </dl>
+              {% endif %}
+
+              {% if 'business-details-name' in data and data['business-details-name'] %}
+              <h2 class="govuk-heading-m govuk-!-margin-top-8">Contact details</h2>
+
+              <dl class="govuk-summary-list">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                      {{ data['business-details-name'] }}
+      
+                      {% if 'business-details-name' in data and (data['business-details-name'] == '' or data['business-details-name'] is none) %}
+                      <p class="govuk-body "></p>
+                    {% endif %}
+                    
+                      <p class="govuk-body govuk-!-margin-top-2">{{ data['business-details-job_title'] }}</p>
+                    </dt>
+      
+                  <dd class="govuk-summary-list__value">
+                    <p class="govuk-body">{{ data['business-details-email'] }}</p>
+                    <p class="govuk-body">{{ data['business-details-phone'] }}</p>
+                    {% if data['business-details-name'] %}
+                    <p class="govuk-body">
+                      {% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
+                      data['business-details-postcode'], data['business-details-country']] %}
+      
+      {% set rolesString = "" %}
+      {% for role in roles %}
+        {% if role %}
+          {% if rolesString.length > 0 %}
+            {% set rolesString = rolesString + ', ' + role %}
+          {% else %}
+            {% set rolesString = role %}
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+      
+      {{ rolesString }} 
+                    </p>
+                    {% endif %}
+      
+       
+                </dd>
+                  <dd class="govuk-summary-list__actions ">
+                    <ul class="govuk-summary-list__actions-list ">
+
+                      <li class="govuk-summary-list__actions-list-item">
+                <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a>
+              </li>
+            </ul>
+          </ul>
+        </dd>
+      </div>
+        <p class="govuk-body govuk-!-margin-top-4">
+          <a href="#" class="govuk-link govuk-link--no-visited-state">Add another contact</a>
+        </p>
+      </dl>
+            {% endif %}
+
+
 
 
 
       <form class="form" action="business-blank" method="post">
 
         <button type="submit" class="govuk-button" data-module="govuk-button">
-            Save and continue
+          Use business
           </button>
           
         </form>
