--- a/app/views/psd-revised-flow/add-business-to-notification/business-role.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-role.html
@@ -26,7 +26,7 @@
             <span class="govuk-caption-l">{{title}}</span>
 
             <h1 class="govuk-fieldset__heading">
-              Add the business’s role in the supply chain for this notification
+              Add the business's role
             </h1>
           </legend>
           <div id="role-hint" class="govuk-hint">
