--- a/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
@@ -27,8 +27,17 @@
   </div>        
 
 
-<!-- Start of dynamic table -->
 
+  <div class="govuk-grid-column-one-third">
+    <div class="govuk-form-group bottom-box opss-text-align-right opss-text-align-bottom">
+      <p class="govuk-body">
+        <a href="enter-business-details" class="govuk-link">Manually enter details </a>
+      </p>  </div>
+</div>
+</div>
+
+
+<!-- Start of dynamic table -->
 
 <section class="govuk-grid-column-full govuk-!-padding-0 govuk-!-margin-top-2" id="page-content">
 
