--- a/app/views/psd-revised-flow/add-business-to-notification/add-contact.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/add-contact.html
@@ -69,7 +69,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
 
      <div class="govuk-button-group">
   <button class="govuk-button" data-module="govuk-button">
-    Save and continue
+    Create business
   </button>
 
 </div>
