--- a/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
@@ -19,7 +19,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <span class="govuk-caption-l">Add businesses and their roles in the supply chain</span>
-        <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Cunningham Products Ltd</h1>
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-8">CUNNINGHAM PRODUCTS LTD</h1>
 
       
                 <h2 class="govuk-heading-m">Business details</h2>
@@ -30,7 +30,7 @@
                         Trading name
                       </dt>
                       <dd class="govuk-summary-list__value">
-                        Cunningham Products Ltd
+                        CUNNINGHAM PRODUCTS LTD
                       </dd>
                       <dd class="govuk-summary-list__actions">
                         <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -42,7 +42,7 @@
                         Registered or legal name
                       </dt>
                       <dd class="govuk-summary-list__value">
-                        Cunningham Products Ltd
+                        CUNNINGHAM PRODUCTS LTD
                       </dd>
                       <dd class="govuk-summary-list__actions">
                         <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a>
