--- a/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
@@ -80,68 +80,67 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr>
-      <td class="govuk-table__cell"><a href="#">Cube Crates Ltd</a></td>
-      <td class="govuk-table__cell">Active</td>
-      <td class="govuk-table__cell">01785622</td>
-      <td class="govuk-table__cell">Unit 3, Killigrew Trading Estate, Ellis Fields, Grantham, GR7 4RF, UK</td>
-    </tr>
-    <tr>
-      <td class="govuk-table__cell"><a href="#">Cunningham Consulting Ltd</a></td>
-      <td class="govuk-table__cell">Active</td>
-      <td class="govuk-table__cell">06564687</td>
-      <td class="govuk-table__cell">31 Cherry Lane, Nottingham, NG1 6HJ, UK</td>
-    </tr>
-    <tr>
-      <td class="govuk-table__cell"><a href="#">Cunningham Groundwork Ltd</a></td>
-      <td class="govuk-table__cell">Dissolved</td>
-      <td class="govuk-table__cell">01258978</td>
-      <td class="govuk-table__cell">65 Commercial Road, Liverpool, L5 9XE, UK</td>
-    </tr>
       <tr>
-        <td class="govuk-table__cell"><a href="business-cunningham">Cunningham Products Ltd</a></td>
+        <td class="govuk-table__cell"><a href="#">CUBE CRATES LTD</a></td>
+        <td class="govuk-table__cell">Active</td>
+        <td class="govuk-table__cell">01785622</td>
+        <td class="govuk-table__cell">Unit 3, Killigrew Trading Estate, Ellis Fields, Grantham, GR7 4RF, UK</td>
+      </tr>
+      <tr>
+        <td class="govuk-table__cell"><a href="#">CUNNINGHAM CONSULTING LTD</a></td>
+        <td class="govuk-table__cell">Active</td>
+        <td class="govuk-table__cell">06564687</td>
+        <td class="govuk-table__cell">31 Cherry Lane, Nottingham, NG1 6HJ, UK</td>
+      </tr>
+      <tr>
+        <td class="govuk-table__cell"><a href="#">CUNNINGHAM GROUNDWORK LTD</a></td>
+        <td class="govuk-table__cell">Dissolved</td>
+        <td class="govuk-table__cell">01258978</td>
+        <td class="govuk-table__cell">65 Commercial Road, Liverpool, L5 9XE, UK</td>
+      </tr>
+      <tr>
+        <td class="govuk-table__cell"><a href="business-cunningham">CUNNINGHAM PRODUCTS LTD</a></td>
         <td class="govuk-table__cell">Active</td>
         <td class="govuk-table__cell">02076315</td>
         <td class="govuk-table__cell">34 Valley Estate, Grantham Road, Barnsley, S71 5GY, UK</td>
       </tr>
       <tr>
-        <td class="govuk-table__cell"><a href="#">Cuno Arts Supplies</a></td>
+        <td class="govuk-table__cell"><a href="#">CUNO ARTS SUPPLIES</a></td>
         <td class="govuk-table__cell">Active</td>
         <td class="govuk-table__cell">01729420</td>
         <td class="govuk-table__cell">The Old Rectory, Much Hadham, HW7 9PL, UK</td>
       </tr>
       <tr>
-        <td class="govuk-table__cell"><a href="#">Cuthberts & Sons Removals Ltd</a></td>
+        <td class="govuk-table__cell"><a href="#">CUTHBERTS & SONS REMOVALS LTD</a></td>
         <td class="govuk-table__cell">Active</td>
         <td class="govuk-table__cell">01730248</td>
         <td class="govuk-table__cell">24 Rose Walk, Cheshunt, EN16 7GY, UK</td>
       </tr>
       <tr>
-        <td class="govuk-table__cell"><a href="#">Dream Designs</a></td>
+        <td class="govuk-table__cell"><a href="#">DREAM DESIGNS</a></td>
         <td class="govuk-table__cell">Active</td>
         <td class="govuk-table__cell">01281233</td>
         <td class="govuk-table__cell">Holly Drive, Hay-on-Wye, Powys, HR3 5BT, UK</td>
       </tr>
       <tr>
-        <td class="govuk-table__cell"><a href="duplicate-business">Dream Manufacturing Ltd</a></td>
+        <td class="govuk-table__cell"><a href="duplicate-business">DREAM MANUFACTURING LTD</a></td>
         <td class="govuk-table__cell">Active</td>
         <td class="govuk-table__cell">01169426</td>
         <td class="govuk-table__cell">Building 5, Willow Estate, Riber Road, Buxton, SK17 6BH, UK</td>
       </tr>
-    <tr>
-      <td class="govuk-table__cell"><a href="#">Dreamtech Electronics Ltd</a></td>
-      <td class="govuk-table__cell">Dissolved</td>
-      <td class="govuk-table__cell">012965644</td>
-      <td class="govuk-table__cell">56 Maple Street, Uckfield, TN22 1PH, UK</td>
-    </tr>
-
       <tr>
-        <td class="govuk-table__cell"><a href="#">Dreamtime Bedding Ltd</a></td>
+        <td class="govuk-table__cell"><a href="#">DREAMTECH ELECTRONICS LTD</a></td>
+        <td class="govuk-table__cell">Dissolved</td>
+        <td class="govuk-table__cell">012965644</td>
+        <td class="govuk-table__cell">56 Maple Street, Uckfield, TN22 1PH, UK</td>
+      </tr>
+      <tr>
+        <td class="govuk-table__cell"><a href="#">DREAMTIME BEDDING LTD</a></td>
         <td class="govuk-table__cell">Active</td>
         <td class="govuk-table__cell">012823551</td>
         <td class="govuk-table__cell">72 Birchwood Road, Wotton-under-Edge, GL12 7AJ, UK</td>
       </tr>
-
-  </tbody>
+        </tbody>
 </table>
 
 <div class="govuk-grid-column-two-thirds govuk-!-padding-0">
