--- a/app/views/psd-revised-flow/add-business-to-notification/edit-contact-bartholomew.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/edit-contact-bartholomew.html
@@ -51,8 +51,22 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
             <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_location">Location</label>
                 <select class="govuk-select govuk-!-width-full" id="business-details-location" name="business-details-location">
                   <option value="selected">Select a location</option>
-                  <option selected="selected" value="address-1">Address 1</option>
-                  <option value="unknown">Unknown</option>
+                  <option value="address-1">{% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
+                    data['business-details-postcode'], data['business-details-country']] %}
+    
+    {% set rolesString = "" %}
+    {% for role in roles %}
+      {% if role %}
+        {% if rolesString.length > 0 %}
+          {% set rolesString = rolesString + ', ' + role %}
+        {% else %}
+          {% set rolesString = role %}
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+    
+    {{ rolesString }} </option>
+                  <option value="unknown">Address not known</option>
                 </select>
           </div>
         
