--- a/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
@@ -45,7 +45,7 @@
                         CUNNINGHAM PRODUCTS LTD
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+                        <a class="govuk-link" href="#"><span class="govuk-visually-hidden"> date of birth</span></a>
                       </dd>
                     </div>
                     <div class="govuk-summary-list__row">
@@ -56,7 +56,7 @@
                         02076315    <a href="#">(View on Companies House)</a>
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> address</span></a>
+                        <a class="govuk-link" href="#"><span class="govuk-visually-hidden"> address</span></a>
                       </dd>
                     </div>
                   </dl>
@@ -69,7 +69,7 @@
 
                         </dt>
                         <dd class="govuk-summary-list__actions">
-                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span class="govuk-visually-hidden"> contact details</span></a></li>
                         </dd>
                       </div>
                       <p class="govuk-body govuk-!-margin-top-4">
