--- a/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
@@ -63,6 +63,9 @@
 
                   <h2 class="govuk-heading-m govuk-!-margin-top-8">Addresses</h2>
 
+                  <div id="waste-hint" class="govuk-hint  govuk-!-margin-bottom-2">This address will be added to the notification unless you choose to add more addresses.</div>
+
+
                   <dl class="govuk-summary-list">
                       <div class="govuk-summary-list__row">
                         34 Valley Estate, Grantham Road, Barnsley, S71 5GY, United Kingdom <span class="small-tag">Registered address</span>
