--- a/app/views/psd-revised-flow/add-business-to-notification/business-dreams.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-dreams.html
@@ -65,6 +65,9 @@
 
                   <h2 class="govuk-heading-m govuk-!-margin-top-8">Addresses</h2>
 
+                  <div id="waste-hint" class="govuk-hint  govuk-!-margin-bottom-2">This address will be added to the notification unless you choose to add more addresses.</div>
+
+
                   <dl class="govuk-summary-list">
                       <div class="govuk-summary-list__row">
 
@@ -100,6 +103,9 @@
 
          
         <h2 class="govuk-heading-m govuk-!-margin-top-8">Contact details</h2>
+
+        <div id="waste-hint" class="govuk-hint  govuk-!-margin-bottom-2">This contact will be added to the notification unless you choose to add more contacts.</div>
+
 
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
