--- a/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
@@ -73,6 +73,9 @@
                   {% if 'business-details-name' in data and data['business-details-name'] %}
                   <h2 class="govuk-heading-m govuk-!-margin-top-8">Addresses</h2>
 
+                  <div id="waste-hint" class="govuk-hint  govuk-!-margin-bottom-2">This address will be added to the notification unless you choose to add more addresses.</div>
+
+
                   <dl class="govuk-summary-list">
                       <div class="govuk-summary-list__row">
 
@@ -140,6 +143,8 @@
 
               {% if 'business-details-name' in data and data['business-details-name'] %}
               <h2 class="govuk-heading-m govuk-!-margin-top-8">Contact details</h2>
+
+              <div id="waste-hint" class="govuk-hint  govuk-!-margin-bottom-2">This contact will be added to the notification unless you choose to add more contacts.</div>
 
               <dl class="govuk-summary-list">
                 <div class="govuk-summary-list__row">
