--- a/app/assets/sass/psd-menu.scss
+++ b/app/assets/sass/psd-menu.scss
@@ -914,22 +914,22 @@ ul#navigation.psd-header__navigation {
 }
 
 .custom-checkbox .checkmark {
-  position:absolute;
+  position: absolute;
   height: 20px;
   width: 20px;
-  border: 2px solid #0B0C0C;
+  border: 2px solid #0b0c0c;
   display: inline-block;
   margin-right: 10px;
 }
 
 .custom-checkbox input[type="checkbox"]:checked + .checkmark:after {
-  content: '';
+  content: "";
   position: absolute;
   left: 6px;
   top: 3px;
   width: 4px;
   height: 9px;
-  border: solid #0B0C0C;
+  border: solid #0b0c0c;
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
 }
