--- a/app/views/psd-revised-flow/add-business-to-notification/business-bartholomew.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-bartholomew.html
@@ -167,36 +167,17 @@
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             {{ data['business-details-name'] }}     
-
-            <p class="govuk-body govuk-!-margin-top-2">{{ data['business-details-job_title'] }} </p>
+            <p class="govuk-body govuk-!-margin-top-2 govuk-!-margin-bottom-0">{{ data['business-details-job_title'] }} </p>
           </dt>
 
           <dd class="govuk-summary-list__value">
             <p class="govuk-body">{{ data['business-details-email'] }} </p>
             <p class="govuk-body">{{ data['business-details-phone'] }} </p>
-            {% if data['business-details-name'] %}
-
-            <p class="govuk-body">{% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
-              data['business-details-postcode'], data['business-details-country']] %}
-  
-              {% set rolesString = "" %}
-              {% for role in roles %}
-              {% if role %}
-              {% if rolesString.length > 0 %}
-              {% set rolesString = rolesString + ', ' + role %}
-              {% else %}
-              {% set rolesString = role %}
-              {% endif %}
-              {% endif %}
-              {% endfor %}
-  
-              {{ rolesString }}   
-            </p>
-            {% endif %}
           </dd>
-          <dd class="govuk-summary-list__actions">
+
+          <dd class="govuk-summary-list__actions ">
             <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-contact-bartholomew">Change<span class="govuk-visually-hidden"> contact details</span></a></li>                </ul>
+              <li class="govuk-summary-list__actions-list-item "><a class="govuk-link" href="edit-contact-bartholomew">Change<span class="govuk-visually-hidden"> contact details</span></a></li>                </ul>
             </dd>
           </div>
           <p class="govuk-body govuk-!-margin-top-4">
