--- a/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
@@ -155,31 +155,12 @@
                       <p class="govuk-body "></p>
                     {% endif %}
                     
-                      <p class="govuk-body govuk-!-margin-top-2">{{ data['business-details-job_title'] }}</p>
-                    </dt>
+                    <p class="govuk-body govuk-!-margin-top-2 govuk-!-margin-bottom-0">{{ data['business-details-job_title'] }} </p>
+                  </dt>
       
                   <dd class="govuk-summary-list__value">
                     <p class="govuk-body">{{ data['business-details-email'] }}</p>
                     <p class="govuk-body">{{ data['business-details-phone'] }}</p>
-                    {% if data['business-details-name'] %}
-                    <p class="govuk-body">
-                      {% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
-                      data['business-details-postcode'], data['business-details-country']] %}
-      
-      {% set rolesString = "" %}
-      {% for role in roles %}
-        {% if role %}
-          {% if rolesString.length > 0 %}
-            {% set rolesString = rolesString + ', ' + role %}
-          {% else %}
-            {% set rolesString = role %}
-          {% endif %}
-        {% endif %}
-      {% endfor %}
-      
-      {{ rolesString }} 
-                    </p>
-                    {% endif %}
       
        
                 </dd>
