--- a/app/views/psd-revised-flow/add-business-to-notification/added-business-summary.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/added-business-summary.html
@@ -46,16 +46,19 @@
           {% endfor %}
         
           {{ rolesString }}
+
         </span>
       </dt>
       <dd class="govuk-summary-list__actions hmrc-summary-list__actions">
         <ul class="govuk-summary-list__actions-list">
-          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="add-business"><span aria-hidden="true">Change</span><span class="govuk-visually-hidden">Change</span></a></li>
+          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" onclick="window.history.go(-2)"><span aria-hidden="true">Change</span><span class="govuk-visually-hidden">Change</span></a></li>
           <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span aria-hidden="true">Remove</span><span class="govuk-visually-hidden">Remove</span></a></li>
         </ul>
       </dd>
     </div>
   </dl>
+
+
 
     <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
