View product record

--- a/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-add-multiple.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-add-multiple.html
@@ -70,7 +70,7 @@
           </dd>
         </div>
         <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View product record</a>
+          <a href="#" class="govuk-link">View business record</a>
         </p>
       </dl>
 
@@ -95,7 +95,7 @@
           </dd>
         </div>
         <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View product record</a>
+          <a href="#" class="govuk-link">View business record</a>
         </p>
       </dl>
 
@@ -120,7 +120,7 @@
           </dd>
         </div>
         <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View product record</a>
+          <a href="#" class="govuk-link">View business record</a>
         </p>
       </dl>
 
