--- a/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-ch-multiple.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-ch-multiple.html
@@ -57,7 +57,7 @@
           </dd>
         </div>
         <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View product record</a>
+          <a href="#" class="govuk-link">View business record</a>
         </p>
       </dl>
 
@@ -90,7 +90,7 @@
           </dd>
         </div>
         <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View product record</a>
+          <a href="#" class="govuk-link">View business record</a>
         </p>
       </dl>
 
@@ -123,7 +123,7 @@
           </dd>
         </div>
         <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View product record</a>
+          <a href="#" class="govuk-link">View business record</a>
         </p>
       </dl>
 
