--- a/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-ch-single.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-ch-single.html
@@ -53,7 +53,7 @@
           </dd>
         </div>
         <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View product record</a>
+          <a href="#" class="govuk-link">View business record</a>
         </p>
       </dl>
 
